[gd_scene load_steps=3 format=3 uid="uid://bxi6bygwc0ey"]

[ext_resource type="Script" path="res://pausemenu_screen.gd" id="1_ntrjx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f4qx3"]
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntrjx")

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -150.0
offset_right = 140.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_f4qx3")

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.25098, 0.760784, 0.760784, 1)
theme_override_colors/font_shadow_color = Color(0.884943, 0.293232, 0.873976, 1)
theme_override_colors/font_outline_color = Color(0.407843, 0.992157, 0.992157, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 45
text = "Game Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.318765, 0.716975, 0.789315, 1)
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="Save Game" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.318765, 0.716975, 0.789315, 1)
theme_override_font_sizes/font_size = 25
text = "Save
"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.318765, 0.716975, 0.789315, 1)
theme_override_font_sizes/font_size = 25
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Save Game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
